Ig the width problem is solved and clipping?...

--- a/main.css
+++ b/main.css
@@ -149,7 +149,7 @@ footer p {
   left: 50%;
   transform: translate(-50%, -50%);
   /* z-index: 2; */
-  width: 70%;
+  width: auto;
   padding: 20px;
   text-align: center;
 }
